<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mkitbs.ekitchen.app.kitchen.KitchenOrderListActivity">
    <item
        android:id="@+id/action_place_order"
        android:orderInCategory="97"
        android:title="@string/kitchen_place_order"
        android:icon="@drawable/add_order"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_divider"
        android:orderInCategory="98"
        android:title=""
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_change_mode"
        android:orderInCategory="99"
        android:title="@string/btn_change_mode"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_consumption"
        android:orderInCategory="100"
        android:title="@string/hall_consumption"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="102"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>