<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hall_call_msg_text"/>

    <EditText
        android:id="@+id/commentEditTextCallKitchen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:scrollbars="vertical"
        android:lines="2"
        android:maxLength="100"
        android:textSize="16sp"
        android:hint="@string/hall_call_hint_text"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hall_call_predefined"/>

    <CheckBox
        android:id="@+id/chkBoxCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hall_call_predefined_call"/>

    <CheckBox
        android:id="@+id/chkBoxCome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hall_call_predefined_come"
        android:layout_marginBottom="20dp"/>


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButtonCallDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_cancel"
            style="@style/btnStyleRed"/>

        <Button
            android:id="@+id/sendButtonCallDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_send_msg"
            style="@style/btnStyleGreen"/>

    </LinearLayout>


</LinearLayout>