<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/confirmDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:text="@string/delivered_dialog_text"/>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/noButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/no"
            style="@style/btnStyleRed"/>

        <Button
            android:id="@+id/yesButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            style="@style/btnStyleGreen"/>

    </LinearLayout>

</LinearLayout>