<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButtonUserCallsDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_cancel"
            style="@style/btnStyleRed"/>

        <Button
            android:id="@+id/updateAllButtonUserCallsDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/user_calls_btn_update_all"
            style="@style/btnStyleBlue"/>

        <Button
            android:id="@+id/updateCheckedButtonUserCallsDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_calls_btn_update_checked"
            style="@style/btnStyleGreen"/>

    </LinearLayout>

    <TextView
        android:id="@+id/noticeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonsLayout"
        android:text="@string/user_calls_dialog_notice"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:textSize="18sp"/>

    <ListView
        android:id="@+id/userCallsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:divider="@color/md_grey_100"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_selector"
        android:layout_above="@id/noticeText"/>

</RelativeLayout>