<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_location"/>

    <Spinner
        android:id="@+id/spinnerLocationOnly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_spinner_selector"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_room"/>

    <Spinner
        android:id="@+id/spinnerRoomOnly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_spinner_selector"/>

    <LinearLayout
        android:id="@+id/bottomBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButtonLocationDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            style="@style/btnStyleGreen"/>

    </LinearLayout>

</LinearLayout>